test/errors/error1.input.asm

* = $801
!error "user error"
